--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,13 @@
         }
     },
     "repositories": {
+        "newfold": {
+            "type": "composer",
+            "url": "https://newfold-labs.github.io/satis/",
+            "only": [
+                "newfold-labs/*"
+            ]
+        },
         "bluehost-satis": {
             "type": "composer",
             "url": "https://bluehost.github.io/satis/"
@@ -46,6 +53,8 @@
     "require": {
         "bluehost/endurance-wp-module-loader": "^1.1",
         "endurance/wp-module-data": "^1.8.3",
+        "newfold-labs/wp-module-loader": "^1.0",
+        "newfold-labs/wp-module-coming-soon": "^1.0",
         "wp-forge/wp-update-handler": "^1.0"
     }
 }
