add notifications module
load module based component in app
tweak style update to allow in app notices do display

--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "newfold-labs/wp-module-coming-soon": "^1.0.7",
         "newfold-labs/wp-module-data": "^2.0.0",
         "newfold-labs/wp-module-loader": "^1.0",
+        "newfold-labs/wp-module-notifications": "^1.0",
         "wp-forge/wp-update-handler": "^1.0"
     }
 }
