--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "php-deps": "composer install --no-dev --optimize-autoloader",
         "create:zip": "cd ./wp-plugin-web && zip -r -9 ../wp-plugin-web.zip . && ls -lh ../wp-plugin-web.zip",
         "prebuild:cleanup": "rm -rf ./build ./wp-plugin-web ./wp-plugin-web.zip ./vendor",
-        "simulate-runner-build": "npm run prebuild:cleanup && npm i && npm run build && npm run php-deps && npm run create:dist && npm run create:zip"
+        "simulate-runner-build": "npm run prebuild:cleanup && npm i && npm run php-deps && npm run build && npm run create:dist && npm run create:zip"
     },
     "dependencies": {
         "@wordpress/a11y": "^2.5.1",
