get plugin package version too

--- a/.github/workflows/upload-asset-on-release.yml
+++ b/.github/workflows/upload-asset-on-release.yml
@@ -20,11 +20,14 @@ jobs:
           taggedVersion=${{ env.VERSION }}
           pluginHeaderVersion=`grep "Version:" wp-plugin-web.php | grep -Eo "[0-9\.]*"`
           pluginConstantVersion=`grep "_PLUGIN_VERSION" wp-plugin-web.php | grep -Eo "[0-9\.]*"`
+          pluginPackageVersion=`grep "version:" package.json | grep -Eo "[0-9\.]*"`
           echo "Tagged version: $taggedVersion"
           echo "Plugin header version: $pluginHeaderVersion"
           echo "Plugin constant version: $pluginConstantVersion"
+          echo "Plugin package version: $pluginPackageVersion"
           [[ "$taggedVersion" == "$pluginHeaderVersion" ]] || exit 1
           [[ "$taggedVersion" == "$pluginConstantVersion" ]] || exit 1
+          [[ "$taggedVersion" == "$pluginPackageVersion" ]] || exit 1
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
