Update workflows to support Git Flow + WP branch naming conventions

--- a/.github/workflows/upload-artifact-on-push.yml
+++ b/.github/workflows/upload-artifact-on-push.yml
@@ -4,7 +4,13 @@ on:
   push:
     branches:
       - main
-
+      - develop
+      - release/*
+      - feature/*
+      - add/*
+      - update/*
+      - fix/*
+      - try/*
 jobs:
   build:
     name: On Push to Main
