--- a/.github/workflows/upload-asset-on-release.yml
+++ b/.github/workflows/upload-asset-on-release.yml
@@ -6,6 +6,13 @@ on:
       - created
       - updated
 
+env:
+  VERSION: ${GITHUB_REF#refs/tags/*}
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.sha }}
+  cancel-in-progress: true
+
 jobs:
   build:
     name: On Release
@@ -45,20 +52,11 @@ jobs:
           mkdir dist
           echo ::set-output name=DIST::${PWD}/dist
           echo ::set-output name=PACKAGE::${REPO##*/}
-      - name: PHP version
-        run: php --version
-
+          
       - name: Set Node.js 16.x
         uses: actions/setup-node@v1
         with:
           node-version: 16.x
-
-      - name: Show versions
-        run: |
-          php --version
-          composer --version
-          node --version
-          npm --version
 
       - name: Get npm cache directory
         id: npm-cache
@@ -71,11 +69,6 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-      - name: npm install
-        run: npm install --legacy-peer-deps
-
-      - name: Validate composer.json and composer.lock
-        run: composer validate
 
       - name: Get Composer Cache Directory
         id: composer-cache
@@ -88,8 +81,22 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-composer-
+
+      - name: Show versions
+        run: |
+          php --version
+          composer --version
+          node --version
+          npm --version
+
+      - name: Validate composer.json and composer.lock
+        run: composer validate
+
       - name: Install PHP Dependencies
         run: composer install --no-progress --no-dev --optimize-autoloader --prefer-dist
+
+      - name: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Build JavaScript
         run: npm run build
