--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,8 +1,11 @@
 name: Cypress Tests
+
 on:
   push:
     branches:
       - main
+      - master
+      - trunk
       - develop
       - release/*
       - feature/*
@@ -10,21 +13,29 @@ on:
       - update/*
       - fix/*
       - try/*
-    paths-ignore:
-      - '.github/**'
-      - '.gitignore'
-      - '**.md'
   pull_request:
-    types: [ opened, edited, synchronize, reopened, ready_for_review ]
+    types: [opened, edited, reopened, ready_for_review]
+  workflow_dispatch:
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.sha }}
   cancel-in-progress: true
+
 jobs:
-  tests:
+  test:
+    name: Run Cypress Tests
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+
+      - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+          coverage: none
+          tools: composer, cs2pr
 
       - name: Setup workflow context
         id: workflow
@@ -36,12 +47,23 @@ jobs:
           echo ::set-output name=DIST::${PWD}/dist
           echo ::set-output name=PACKAGE::${REPO##*/}
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v1
         with:
-          php-version: '8.1'
-          coverage: none
-          tools: composer
+          node-version: 16.x
+
+      - name: Get npm cache directory
+        id: npm-cache
+        run: echo "::set-output name=dir::$(npm config get cache)"
+
+      - name: Cache node modules
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.npm-cache.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
 
       - name: Get Composer cache directory
         id: composer-cache
@@ -53,39 +75,22 @@ jobs:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
-            ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+            ${{ runner.os }}-composer-
 
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16.x
-
-      - name: Cache node modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
-      - name: Log debug information
+      - name: Show versions
         run: |
           php --version
           composer --version
           node --version
           npm --version
 
-      - name: Validate composer.json and composer.lock files
+      - name: Validate composer.json and composer.lock
         run: composer validate
 
       - name: Install PHP Dependencies
-        run: composer install --no-progress --no-dev --optimize-autoloader
+        run: composer install --no-progress --no-dev --optimize-autoloader --prefer-dist
 
-      - name: Run NPM Install
+      - name: NPM Install
         run: npm install --legacy-peer-deps
 
       - name: Build JavaScript
@@ -114,24 +119,7 @@ jobs:
           name: screenshots
           path: ./tests/cypress/screenshots
 
-      - name: Check if a debug.log file exists
-        id: hasErrors
-        run: npx wp-env run wordpress test ! -f /var/www/html/wp-content/debug.log
-
-      - name: Copy debug.log file
-        if: ${{ steps.hasErrors.outputs.failure }}
-        run: cat /var/www/html/wp-content/debug.log 1>./debug.log 2>/dev/null
-
-      - name: Store debug.log file
-        if: ${{ steps.hasErrors.outputs.failure }}
-        uses: actions/upload-artifact@v2
-        with:
-          name: logs
-          path: ./debug.log
-
-#       - name: Store a copy of the plugin on success
-#         if: ${{ success() }}
-#         uses: actions/upload-artifact@v1
-#         with:
-#           name: ${{ steps.workflow.outputs.PACKAGE }}
-#           path: ${{ steps.workflow.outputs.DIST }}
+      - name: Output debug.log file contents
+        if: ${{ always() }}
+        continue-on-error: true
+        run: npx wp-env run wordpress "cat /var/www/html/wp-content/debug.log"
