--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
     "config": {
         "optimize-autoloader": true,
         "sort-packages": true,
+        "platform": {
+            "php": "7.0.0"
+        },
         "platform-check": false,
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
@@ -55,10 +58,11 @@
         "i18n": "Generate a .pot file for translation."
     },
     "require": {
+        "doctrine/inflector": "1.2.0 as 1.3.1",
         "newfold-labs/wp-module-coming-soon": "^1.0.7",
         "newfold-labs/wp-module-data": "^2.0.0",
         "newfold-labs/wp-module-loader": "^1.0",
-        "newfold-labs/wp-module-marketplace": "^1.2",
+        "newfold-labs/wp-module-marketplace": "^1.3.3",
         "newfold-labs/wp-module-notifications": "^1.0",
         "newfold-labs/wp-module-performance": "^1.0",
         "wp-forge/wp-update-handler": "^1.0"
