--- a/.github/workflows/upload-asset-on-release.yml
+++ b/.github/workflows/upload-asset-on-release.yml
@@ -6,6 +6,13 @@ on:
       - created
       - updated
 
+env:
+  VERSION: ${GITHUB_REF#refs/tags/*}
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.sha }}
+  cancel-in-progress: true
+
 jobs:
   build:
     name: On Release
@@ -32,7 +39,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.4'
+          php-version: '8.1'
           coverage: none
           tools: composer, cs2pr
 
@@ -45,19 +52,11 @@ jobs:
           mkdir dist
           echo ::set-output name=DIST::${PWD}/dist
           echo ::set-output name=PACKAGE::${REPO##*/}
-      - name: PHP version
-        run: php --version
 
-      - name: Set Node.js 14.x
+      - name: Set Node.js 16.x
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
-
-      - name: Node version
-        run: node --version
-
-      - name: NPM version
-        run: npm --version
+          node-version: 16.x
 
       - name: Get npm cache directory
         id: npm-cache
@@ -70,11 +69,6 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-      - name: npm install
-        run: npm install
-
-      - name: Validate composer.json and composer.lock
-        run: composer validate
 
       - name: Get Composer Cache Directory
         id: composer-cache
@@ -87,8 +81,22 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-composer-
+
+      - name: Show versions
+        run: |
+          php --version
+          composer --version
+          node --version
+          npm --version
+
+      - name: Validate composer.json and composer.lock
+        run: composer validate
+
       - name: Install PHP Dependencies
         run: composer install --no-progress --no-dev --optimize-autoloader --prefer-dist
+
+      - name: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Build JavaScript
         run: npm run build
