--- a/.github/workflows/satis-webhook.yml
+++ b/.github/workflows/satis-webhook.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           token: ${{ secrets.WEBHOOK_TOKEN }}
           repository: newfold-labs/satis
-          event-type: 'Trigger Satis Build'
+          event-type: 'satis-build'
           client-payload: >-
             {
               "vendor": "${{ github.repository_owner }}",
