--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,9 @@
         "newfold-labs/wp-module-marketplace": "^1.3.3",
         "newfold-labs/wp-module-notifications": "^1.0",
         "newfold-labs/wp-module-performance": "^1.0",
-        "wp-forge/wp-update-handler": "^1.0"
+        "newfold-labs/wp-module-secure-passwords": "^1.1",
+        "newfold-labs/wp-module-sso": "^1.0",
+        "wp-forge/wp-update-handler": "^1.0",
+        "wp-forge/wp-upgrade-handler": "^1.0"
     }
 }
