--- a/.github/workflows/upload-asset-on-release.yml
+++ b/.github/workflows/upload-asset-on-release.yml
@@ -23,10 +23,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Validate version number
+        if: ${{ github.repository == 'newfold-labs/wp-plugin-web' }}
         run: |
           taggedVersion=${{ env.VERSION }}
           pluginHeaderVersion=`grep "Version:" wp-plugin-web.php | grep -Eo "[0-9\.]*"`
-          pluginConstantVersion=`grep "_PLUGIN_VERSION" wp-plugin-web.php | grep -Eo "[0-9\.]*"`
+          pluginConstantVersion=`grep "'WEB_PLUGIN_VERSION'" wp-plugin-web.php | grep -Eo "[0-9\.]*"`
           pluginPackageVersion=`grep "version:" package.json | grep -Eo "[0-9\.]*"`
           echo "Tagged version: $taggedVersion"
           echo "Plugin header version: $pluginHeaderVersion"
