--- a/.newfold-project.json
+++ b/.newfold-project.json
@@ -13,7 +13,7 @@
     },
     "author": {
         "name": "Evan Mullins",
-        "email": "evanrm@gmail.com",
+        "email": "evan@bluehost.com",
         "url": "https://evanmullins.com"
     },
     "text_domain": "wp-plugin-web",
