--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "url": "https://evanmullins.com"
     },
     "devDependencies": {
+        "@replayio/cypress": "^0.5.10",
         "@testing-library/cypress": "^9.0.0",
         "@wordpress/env": "^5.16.0",
         "@wordpress/scripts": "^26.4.0",
@@ -19,6 +20,8 @@
         "build": "wp-scripts build",
         "check-engines": "wp-scripts check-engines",
         "check-licenses": "wp-scripts check-licenses --production",
+        "cypress": "npm cypress open",
+        "cypress:record": "RECORD_ALL_CONTENT=1 RECORD_REPLAY_METADATA_FILE=$(mktemp) npx cypress run --browser 'Replay Chromium'",
         "develop": "npm run start",
         "develop:analyzer": "npm run start:analyzer",
         "lint:css": "wp-scripts lint-style '**/*.css'",
