--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     "require-dev": {
         "newfold-labs/wp-php-standards": "^1.2",
         "wp-cli/i18n-command": "^2.4",
-        "wp-phpunit/wp-phpunit": "^6.2"
+        "wp-phpunit/wp-phpunit": "^6.3.1"
     },
     "scripts": {
         "fix": "vendor/bin/phpcbf --standard=phpcs.xml .",
@@ -55,12 +55,12 @@
     },
     "require": {
         "doctrine/inflector": "1.2.0 as 1.3.1",
-        "newfold-labs/wp-module-coming-soon": "^1.1.3",
-        "newfold-labs/wp-module-data": "^2.4.3",
+        "newfold-labs/wp-module-coming-soon": "^1.1.9",
+        "newfold-labs/wp-module-data": "^2.4.5",
         "newfold-labs/wp-module-loader": "^1.0.10",
-        "newfold-labs/wp-module-marketplace": "^1.5.1",
-        "newfold-labs/wp-module-notifications": "^1.1.2",
-        "newfold-labs/wp-module-performance": "^1.1.1",
+        "newfold-labs/wp-module-marketplace": "1.5.2",
+        "newfold-labs/wp-module-notifications": "^1.1.5",
+        "newfold-labs/wp-module-performance": "1.1.1",
         "newfold-labs/wp-module-secure-passwords": "^1.1",
         "newfold-labs/wp-module-sso": "^1.0.4",
         "wp-forge/wp-update-handler": "^1.0",
