--- a/package.json
+++ b/package.json
@@ -4,44 +4,24 @@
     "license": "GPL-2.0-or-later",
     "version": "1.2.9",
     "private": true,
-    "author": {
-        "name": "Evan Mullins",
-        "url": "https://evanmullins.com"
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/newfold-labs/wp-plugin-web.git"
     },
-    "devDependencies": {
-        "@replayio/cypress": "^1.3.3",
-        "@testing-library/cypress": "^10.0.1",
-        "@wordpress/env": "^8.7.0",
-        "@wordpress/scripts": "^26.13.0",
-        "cypress": "^13.2.0",
-        "cypress-axe": "^1.5.0"
+    "bugs": {
+        "url": "https://github.com/newfold-labs/wp-plugin-web/issues"
     },
-    "scripts": {
-        "build": "wp-scripts build",
-        "check-engines": "wp-scripts check-engines",
-        "check-licenses": "wp-scripts check-licenses --production",
-        "cypress": "npm cypress open",
-        "cypress:record": "RECORD_ALL_CONTENT=1 RECORD_REPLAY_METADATA_FILE=$(mktemp) npx cypress run --browser 'Replay Chromium'",
-        "develop": "npm run start",
-        "develop:analyzer": "npm run start:analyzer",
-        "lint:css": "wp-scripts lint-style '**/*.css'",
-        "lint:js": "wp-scripts lint-js ./src",
-        "lint:js:fix": "wp-scripts lint-js ./src --fix",
-        "lint:pkg-json": "wp-scripts lint-pkg-json",
-        "lint:yml": "yamllint --ignore=node_modules/** --ignore=vendor/** **/*.yml",
-        "i18n": "wpi18n addtextdomain && composer run i18n",
-        "start": "NODE_ENV=develop wp-scripts start",
-        "start:analyzer": "npm run start --webpack-bundle-analyzer",
-        "storybook:dev": "start-storybook -c ./storybook",
-        "storybook:build": "build-storybook -c ./storybook -o ./.docs",
-        "test:e2e": "npx cypress run",
-        "test:unit": "wp-scripts test-unit-js",
-        "create:dist": "rsync -r --exclude-from=.distignore . ./wp-plugin-web",
-        "php-deps": "composer install --no-dev --optimize-autoloader",
-        "create:zip": "cd ./wp-plugin-web && zip -r -9 ../wp-plugin-web.zip . && ls -lh ../wp-plugin-web.zip",
-        "prebuild:cleanup": "rm -rf ./build ./wp-plugin-web ./wp-plugin-web.zip ./vendor",
-        "simulate-runner-build": "npm run prebuild:cleanup && npm i && npm run php-deps && npm run build && npm run create:dist && npm run create:zip",
-        "srb": "npm run simulate-runner-build"
+    "homepage": "https://github.com/newfold-labs/wp-plugin-web#readme",
+    "contributors": [
+        "Abdulrahman Al Ani (https://alani.dev/)",
+        "Evan Mullins (https://evanmullins.com)",
+        "Jonathan Desrosiers (https://jonathandesrosiers.com)",
+        "Micah Wood (https://wpscholar.com)",
+        "William Earnhardt (https://wearnhardt.com)"
+    ],
+    "engines": {
+        "node": ">=16",
+        "npm": ">=7"
     },
     "dependencies": {
         "@wordpress/compose": "^6.19.0",
@@ -56,5 +36,43 @@
         "react-error-boundary": "^4.0.11",
         "react-router-dom": "^6.16.0",
         "react-use": "^17.4.0"
+    },
+    "devDependencies": {
+        "@replayio/cypress": "^1.3.3",
+        "@testing-library/cypress": "^10.0.1",
+        "@wordpress/env": "^8.7.0",
+        "@wordpress/scripts": "^26.13.0",
+        "cypress": "^13.2.0",
+        "cypress-axe": "^1.5.0"
+    },
+    "scripts": {
+        "build": "wp-scripts build",
+        "check-engines": "wp-scripts check-engines",
+        "check-licenses": "wp-scripts check-licenses --production",
+        "create:dist": "rsync -r --exclude-from=.distignore . ./wp-plugin-web",
+        "create:zip": "cd ./wp-plugin-web && zip -r -9 ../wp-plugin-web.zip . && ls -lh ../wp-plugin-web.zip",
+        "cypress": "npm cypress open",
+        "cypress:record": "RECORD_ALL_CONTENT=1 RECORD_REPLAY_METADATA_FILE=$(mktemp) npx cypress run --browser 'Replay Chromium'",
+        "develop": "npm run start",
+        "develop:analyzer": "npm run start:analyzer",
+        "i18n": "wpi18n addtextdomain && composer run i18n",
+        "lint:css": "wp-scripts lint-style '**/*.css'",
+        "lint:js": "wp-scripts lint-js ./src",
+        "lint:js:fix": "wp-scripts lint-js ./src --fix",
+        "lint:pkg-json": "wp-scripts lint-pkg-json",
+        "lint:yml": "yamllint --ignore=node_modules/** --ignore=vendor/** **/*.yml",
+        "log:watch": "wp-env run wordpress 'tail -f /var/www/html/wp-content/debug.log'",
+        "php-deps": "composer install --no-dev --optimize-autoloader",
+        "postprepare": "npm run set-wp-version",
+        "prebuild:cleanup": "rm -rf ./build ./wp-plugin-web ./wp-plugin-web.zip ./vendor",
+        "set-wp-version": "node ./set-latest-wp-version.js",
+        "simulate-runner-build": "npm run prebuild:cleanup && npm i && npm run php-deps && npm run build && npm run create:dist && npm run create:zip",
+        "srb": "npm run simulate-runner-build",
+        "start": "NODE_ENV=develop wp-scripts start",
+        "start:analyzer": "npm run start --webpack-bundle-analyzer",
+        "storybook:dev": "start-storybook -c ./storybook",
+        "storybook:build": "build-storybook -c ./storybook -o ./.docs",
+        "test:e2e": "npx cypress run",
+        "test:unit": "wp-scripts test-unit-js"
     }
 }
