--- a/.distignore
+++ b/.distignore
@@ -4,24 +4,34 @@
 /bin
 node_modules
 /src
-tests
+/tests
 
 # Files
-.*
+/.*
 cypress.config.js
 set-latest-wp-version.js
+webpack.config.js
 
 # File Types
 /*.json
-*.lock
-*.log
-*.md
-*.sql
-*.tar.gz
-*.xml
-*.yml
-*.zip
+/*.lock
+/*.log
+/*.md
+/*.sql
+/*.tar.gz
+/*.xml
+/*.yml
+/*.zip
 
 # Newfold src files
-vendor/newfold-labs/wp-module-ecommerce/src
-vendor/newfold-labs/wp-module-onboarding/src
+vendor/newfold-labs/*/src
+vendor/newfold-labs/*/source
+vendor/newfold-labs/*/tests
+vendor/newfold-labs/*/.*
+vendor/newfold-labs/*/*.xml
+vendor/newfold-labs/*/*.json
+vendor/newfold-labs/*/*.lock
+vendor/newfold-labs/*/*.scss
+vendor/newfold-labs/*/*.md
+vendor/newfold-labs/*/*.config.js
+vendor/newfold-labs/*/LICENSE
