--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "wp-plugin-web",
     "description": "WordPress plugin that integrates your WordPress site with the Web.com control panel, including performance, security, and update features.",
     "license": "GPL-2.0-or-later",
-    "version": "1.3.0",
+    "version": "2.0.0",
     "private": true,
     "repository": {
         "type": "git",
@@ -21,14 +21,17 @@
     ],
     "engines": {
         "node": ">=16",
-        "npm": ">=7"
+        "npm": ">=8"
     },
     "dependencies": {
+        "@heroicons/react": "^2.0.18",
+        "@newfold/ui-component-library": "^1.0.0",
+        "@newfold-labs/wp-module-runtime": "^1.0.7",
         "@wordpress/compose": "^6.22.0",
-        "@wordpress/dom-ready": "^3.44.0",
+        "@wordpress/dom-ready": "^3.45.0",
         "@wordpress/element": "^5.21.0",
-        "@wordpress/i18n": "^4.42.0",
-        "@wordpress/icons": "^9.35.0",
+        "@wordpress/i18n": "^4.45.0",
+        "@wordpress/icons": "^9.36.0",
         "classnames": "^2.3.2",
         "jquery": "^3.7.1",
         "lodash": "^4.17.21",
@@ -38,12 +41,16 @@
         "react-use": "^17.4.0"
     },
     "devDependencies": {
-        "@replayio/cypress": "^1.6.1",
+        "@replayio/cypress": "^1.7.0",
+        "@tailwindcss/forms": "^0.5.7",
         "@testing-library/cypress": "^10.0.1",
-        "@wordpress/env": "^8.10.0",
+        "@wordpress/env": "^8.11.0",
         "@wordpress/scripts": "^26.16.0",
+        "axe-core": "^4.8.2",
         "cypress": "^13.5.0",
-        "cypress-axe": "^1.5.0"
+        "cypress-axe": "^1.5.0",
+        "tailwindcss": "^3.3.3",
+        "yaml-lint": "^1.7.0"
     },
     "scripts": {
         "build": "wp-scripts build",
