--- a/.github/workflows/cypress-tests-beta.yml
+++ b/.github/workflows/cypress-tests-beta.yml
@@ -1,20 +1,9 @@
-name: Cypress Tests
+name: Cypress Tests Beta Only
 
 on:
-  push:
-    branches:
-      - main
-      - master
-      - trunk
-      - develop
-      - release/*
-      - feature/*
-      - add/*
-      - update/*
-      - fix/*
-      - try/*
-  pull_request:
-    types: [opened, edited, reopened, ready_for_review]
+  schedule:
+    # Runs "Every Monday 6am UTC"
+    - cron: '0 6 * * 1'
   workflow_dispatch:
 
 concurrency:
@@ -23,10 +12,11 @@ concurrency:
 
 jobs:
   test:
-    name: Run Cypress Tests
+    name: Run Cypress Beta Only Tests
     runs-on: ubuntu-latest
-    steps:
+    timeout-minutes: 45
 
+    steps:
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -46,24 +36,11 @@ jobs:
           mkdir dist
           echo "DIST=${PWD}/dist" >> $GITHUB_OUTPUT
           echo "PACKAGE=${REPO##*/}" >> $GITHUB_OUTPUT
-
       - name: Use Node.js 16.x
         uses: actions/setup-node@v4
         with:
           node-version: 16.x
-
-      - name: Get npm cache directory
-        id: npm-cache
-        run: echo "dir=$(npm config get cache)" >> $GITHUB_OUTPUT
-
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.npm-cache.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
+          cache: 'npm'
 
       - name: Get Composer cache directory
         id: composer-cache
@@ -76,14 +53,12 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-composer-
-
       - name: Show versions
         run: |
           php --version
           composer --version
           node --version
           npm --version
-
       - name: Validate composer.json and composer.lock
         run: composer validate
 
@@ -106,28 +81,35 @@ jobs:
         working-directory: ${{ steps.workflow.outputs.DIST }}
         run: find .
 
+      - name: Fetch WordPress beta version
+        run: |
+          wp_beta_zip=$(node -e "
+            const fetch = require('node-fetch');
+            fetch('https://api.wordpress.org/core/version-check/1.7/?channel=beta')
+              .then(response => response.json())
+              .then(data => data.offers[0].download);
+          ")
+          echo $wp_beta_zip
+
       - name: Configure WordPress
-        run: echo '{"config":{"WP_DEBUG_DISPLAY":false},"plugins":["${{ steps.workflow.outputs.DIST }}/${{ steps.workflow.outputs.PACKAGE }}"]}' > .wp-env.override.json
+        run: |
+          echo '{ "core" : "'"${wp_beta_zip}"'" , "plugins":[ "${{ steps.workflow.outputs.DIST }}/${{ steps.workflow.outputs.PACKAGE }}" ] }' > .wp-env.override.json
 
       - name: Install WordPress
-        run: npx @wordpress/env@latest start
+        run: npx wp-env start --debug
 
       - name: Run Cypress Tests
-        if: ${{ github.repository != 'newfold-labs/wp-plugin-web' || github.actor == 'dependabot[bot]' }}
-        run: npm run test:e2e -- --browser chrome
-
-      - name: Run Cypress Cloud Tests
-        if: ${{ github.repository == 'newfold-labs/wp-plugin-web' && github.actor != 'dependabot[bot]' }}
-        run: npm run test:e2e -- --browser chrome --record --key ${{ secrets.CYPRESS_RECORD_KEY }} --tag web
+        if: ${{ github.repository == 'newfold-labs/wp-plugin-web' }}
+        run: npm run test:e2e -- --browser chrome --tag "web, wp-beta"
 
       - name: Store screenshots of test failures
-        if: ${{ failure() }}
+        if: failure()
         uses: actions/upload-artifact@v3
         with:
           name: screenshots
           path: ./tests/cypress/screenshots
 
       - name: Output debug.log file contents
-        if: ${{ always() }}
+        if: always()
         continue-on-error: true
         run: npx wp-env run wordpress "cat /var/www/html/wp-content/debug.log"
