--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@wordpress/element": "^6.4.0",
         "@wordpress/i18n": "^5.7.0",
         "@wordpress/icons": "^10.4.0",
+        "ajv": "^8.17.1",
         "classnames": "^2.5.1",
         "jquery": "^3.7.1",
         "lodash": "^4.17.21",
