--- a/composer.json
+++ b/composer.json
@@ -72,13 +72,14 @@
         "newfold-labs/wp-module-loader": "^1.0.13",
         "newfold-labs/wp-module-marketplace": "2.6.3",
         "newfold-labs/wp-module-notifications": "^1.7.0",
-        "newfold-labs/wp-module-performance": "3.3.0",
+        "newfold-labs/wp-module-performance": "3.5.5",
         "newfold-labs/wp-module-runtime": "^1.1.3",
         "newfold-labs/wp-module-secure-passwords": "^1.1.2",
         "newfold-labs/wp-module-sso": "^1.2.0",
         "wp-cli/wp-cli": "^2.11",
         "wp-forge/wp-update-handler": "^1.0.2",
-        "wp-forge/wp-upgrade-handler": "^1.0"
+        "wp-forge/wp-upgrade-handler": "^1.0",
+         "newfold-labs/wp-module-htaccess": "^1.0.0"
     },
     "require-dev": {
         "newfold-labs/wp-php-standards": "^1.2.5",
